# LCLCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build_compiler.bat  build_libs.bat  build_tests.bat  run.bat  test.bat
libs/expected/: CMakeLists.txt
libs/magic_enum/: magic_enum.hpp
sources/: allocators.hpp  ast.cpp  ast.hpp  chars.hpp  main.cpp  memory.hpp  std_utils.hpp  string_view_utils.hpp  tokenizer.cpp  tokenizer.hpp  win32_specific.cpp
tests/: test_ast_gen.cpp  test_chars_and_string_view_utils.cpp  test_std_utils.cpp  test_tokenizer.cpp  test_utils.hpp  tokenizer_tests.cpp
